--- a/work21/index.css
+++ b/work21/index.css
@@ -1,4 +1,4 @@
-.title{
+.title {
     text-align: center;
 }
 
@@ -43,18 +43,22 @@
     height: 15px;
     border-radius: 100%;
     background: rgba(145, 144, 144, .5);
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .dot .on {
     background-color: #fff;
 }
 
-/* 左右翻页箭头样式 */
+
+.arrow {
+    display: none;
+}
+
 .arrow span {
     display: block;
     width: 50px;
-    height: 50px;
+    height: 100px;
     background: rgba(0, 0, 0, .6);
     color: #fff;
     text-align: center;
